--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,11 +12,11 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>The Monkees Fansite</title>
 </head>
+
 <body>
     <header>
         <div class="row no-gutters">
-            <a class="col-md-12 logo" href="02-index.html"></a>
-            <div class="col-md-8">
+            <div class="col-md-12">
                 <div class="row no-gutters bg-color-name-title">
                     <div class="col heading">
                         <h1 class="name">The Monkees</h1>
@@ -30,11 +31,8 @@
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-meettheband menuitem">
                                 <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-users" aria-hidden="true"></i><span>Meet The Band</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 list-inline-item ui-menu-color-gallery menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-camera" aria-hidden="true"></i><span>Gallery</span></a>
-                            </li>
-                            <li class="col-6 col-sm-3 list-inline-item ui-menu-color-listen menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-headphones" aria-hidden="true"></i><span>Listen</span></a>
+                            <li class="col-6 col-sm-3 list-inline-item ui-menu-color-media menuitem">
+                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-headphones" aria-hidden="true"></i><span>Media</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-tour menuitem">
                                 <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-bullhorn" aria-hidden="true"></i><span>Tour</span></a>
@@ -46,12 +44,37 @@
         </div>
     </header>
     <section class="container-fluid">
-            
+        <div class="row no-gutters">
+            <a class="col-md-4 logo" href="02-index.html"></a>
+            <div class="col-md-8">
+                <div class="row no-gutters bg-color-name-title">
+                    <div class="col heading">
+                        <h2 class="title"> Hey, Hey, We're The Monkees!</h2>
+                    </div>
+                </div>
+                <div class="row no-gutters">
+                    <div class="col">
+                        <form>
+                            <div class="form-group"><p><h3>Subscribe to our Newsletter!</h3></p>
+                                <label for="exampleInputName1">Name</label>
+                                <input type="name" class="form-control" id="exampleInputName1" aria-describedby="emailHelp" placeholder="Jane Doe">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">Email</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="janedoe@gmail.com">
+                                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                            </div>
+                            <button type="submit" class="btn btn-warning">Subscribe!</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <footer class="container-fluid">
         <div id="footer-details" class="row">
             <div class="col-12">
-                <h5 class="uppercase general-sub">Connect with us!
+                <h5 class="uppercase general-sub">Connect with us!</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
                         <a target="_blank" href="#">
@@ -90,9 +113,9 @@
                         </a>
                     </li>
                 </ul>
-                </h5>
             </div>
         </div>
     </footer>
 </body>
+
 </html>
