--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Just+Another+Hand|Modak" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>The Monkees Fansite</title>
+    <title>The Monkees</title>
 </head>
 
 <body>
@@ -26,16 +26,16 @@
                     <div class="col">
                         <ul id="nav" class="list-inline menucontainer">
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-home menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
+                                <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-meettheband menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-users" aria-hidden="true"></i><span>Meet The Band</span></a>
+                                <a href="meettheband.html" class="hvr-sweep-to-bottom"><i class="fa fa-users" aria-hidden="true"></i><span>Meet The Band</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-media menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-headphones" aria-hidden="true"></i><span>Media</span></a>
+                                <a href="media.html" class="hvr-sweep-to-bottom"><i class="fa fa-headphones" aria-hidden="true"></i><span>Media</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-tour menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-bullhorn" aria-hidden="true"></i><span>Tour</span></a>
+                                <a href="tour.html" class="hvr-sweep-to-bottom"><i class="fa fa-bullhorn" aria-hidden="true"></i><span>Tour</span></a>
                             </li>
                         </ul>
                     </div>
@@ -45,15 +45,15 @@
     </header>
     <section class="container-fluid">
         <div class="row no-gutters">
-            <a class="col-md-4 logo" href="02-index.html"></a>
+            <a class="col-md-4 logo" href="meettheband.html"></a>
             <div class="col-md-8">
                 <div class="row no-gutters bg-color-name-title">
                     <div class="col heading">
                         <h2 class="title"> Hey, Hey, We're The Monkees!</h2>
                     </div>
                 </div>
-                <div class="row no-gutters">
-                    <div class="col">
+                <div class="row no-gutters form-group">
+                    <div class="col form-group">
                         <form>
                             <div class="form-group"><p><h3>Subscribe to our Newsletter!</h3></p>
                                 <label for="exampleInputName1">Name</label>
@@ -64,7 +64,7 @@
                                 <input type="email" class="form-control" id="exampleInputEmail1" placeholder="janedoe@gmail.com">
                                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                             </div>
-                            <button type="submit" class="btn btn-warning">Subscribe!</button>
+                            <button type="submit" class="btn btn-warning"> Subscribe! </button>
                         </form>
                     </div>
                 </div>
@@ -77,37 +77,19 @@
                 <h5 class="uppercase general-sub">Connect with us!</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
+                        <a target="_blank" href="https://www.facebook.com/TheMonkees/">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
+                        <a target="_blank" href="https://twitter.com/themonkees?lang=en">
                             <i class="fa fa-twitter" aria-hidden="true"></i>
                             <span class="sr-only">Twitter</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-linkedin" aria-hidden="true"></i>
-                            <span class="sr-only">LinkedIn</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-pinterest" aria-hidden="true"></i>
-                            <span class="sr-only">Pinterest</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-instagram" aria-hidden="true"></i>
-                            <span class="sr-only">Instagram</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
+                        <a target="_blank" href="https://www.youtube.com/user/themonkees">
                             <i class="fa fa-youtube" aria-hidden="true"></i>
                             <span class="sr-only">YouTube</span>
                         </a>
