--- a/meettheband.html
+++ b/meettheband.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +10,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Just+Another+Hand|Modak" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>The Monkees Fansite</title>
+    <title>The Monkees</title>
 </head>
+
 <body>
     <header>
         <div class="row no-gutters">
@@ -24,16 +26,16 @@
                     <div class="col">
                         <ul id="nav" class="list-inline menucontainer">
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-home menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
+                                <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-meettheband menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-users" aria-hidden="true"></i><span>Meet The Band</span></a>
+                                <a href="meettheband.html" class="hvr-sweep-to-bottom"><i class="fa fa-users" aria-hidden="true"></i><span>Meet The Band</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-media menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-headphones" aria-hidden="true"></i><span>Media</span></a>
+                                <a href="media.html" class="hvr-sweep-to-bottom"><i class="fa fa-headphones" aria-hidden="true"></i><span>Media</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-tour menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-bullhorn" aria-hidden="true"></i><span>Tour</span></a>
+                                <a href="tour.html" class="hvr-sweep-to-bottom"><i class="fa fa-bullhorn" aria-hidden="true"></i><span>Tour</span></a>
                             </li>
                         </ul>
                     </div>
@@ -41,46 +43,53 @@
             </div>
         </div>
     </header>
-    <section class="container-fluid">
-            
-    </section>
+<div class="row no-gutters band-cards">
+    <div class="card-md col-3" style="width: 18rem;">
+        <img class="card-img-top" src="assets/images/md.jpg" alt="Micky Dolenz">
+        <div class="card-body">
+            <p class="card-text"><h3 class="member-head">Micky Dolenz - </h3><br><b>Birthdate:</b> March 8th, 1945<br><b>Nationality:</b>  American<br><b>Height:</b> 6'0" (183cm)<br><b>Born In:</b> Los Angeles, California</p>
+        </div>
+    </div>
+    <div class="card-pt col-3" style="width: 18rem;">
+        <img class="card-img-top" src="assets/images/pt.jpg" alt="Peter Tork">
+        <div class="card-body">
+            <p class="card-text"><h3 class="member-head">Peter Tork - </h3><br><b>Birthdate:</b> February 13th, 1942<br><b>Nationality:</b>  American<br><b>Height:</b> 5'10" (178cm)<br><b>Born In:</b> Washington, District of Columbia</p>
+        </div>
+    </div>
+    <div class="card-dj col-3" style="width: 18rem;">
+        <img class="card-img-top" src="assets/images/dj.jpg" alt="Davy Jones">
+        <div class="card-body">
+            <p class="card-text"><h3 class="member-head">Davy Jones - </h3><br><b>Birthdate:</b> December 30th, 1945<br><b>Nationality:</b>  British<br><b>Height:</b> 5'3" (160cm)<br><b>Born In:</b> Machester, England, UK</p>
+        </div>
+    </div>
+    <div class="card-mn col-3" style="width: 18rem;">
+        <img class="card-img-top" src="assets/images/mn.jpg" alt="Michael Nesmith">
+        <div class="card-body">
+            <p class="card-text"><h3 class="member-head">Michael Nesmith - </h3><br><b>Birthdate:</b> December 30th, 1942<br><b>Nationality:</b>  American<br><b>Height:</b> 6'1" (185cm)<br><b>Born In:</b> Houston, Texas</p>
+        </div>
+    </div>
+    </div>
+    
+
     <footer class="container-fluid">
         <div id="footer-details" class="row">
             <div class="col-12">
                 <h5 class="uppercase general-sub">Connect with us!</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
+                        <a target="_blank" href="https://www.facebook.com/TheMonkees/">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
+                        <a target="_blank" href="https://twitter.com/themonkees?lang=en">
                             <i class="fa fa-twitter" aria-hidden="true"></i>
                             <span class="sr-only">Twitter</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-linkedin" aria-hidden="true"></i>
-                            <span class="sr-only">LinkedIn</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-pinterest" aria-hidden="true"></i>
-                            <span class="sr-only">Pinterest</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-instagram" aria-hidden="true"></i>
-                            <span class="sr-only">Instagram</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
+                        <a target="_blank" href="https://www.youtube.com/user/themonkees">
                             <i class="fa fa-youtube" aria-hidden="true"></i>
                             <span class="sr-only">YouTube</span>
                         </a>
@@ -90,4 +99,5 @@
         </div>
     </footer>
 </body>
+
 </html>
