--- a/tour.html
+++ b/tour.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +10,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Just+Another+Hand|Modak" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>The Monkees Fansite</title>
+    <title>The Monkees</title>
 </head>
+
 <body>
     <header>
         <div class="row no-gutters">
@@ -24,16 +26,16 @@
                     <div class="col">
                         <ul id="nav" class="list-inline menucontainer">
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-home menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
+                                <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-meettheband menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-users" aria-hidden="true"></i><span>Meet The Band</span></a>
+                                <a href="meettheband.html" class="hvr-sweep-to-bottom"><i class="fa fa-users" aria-hidden="true"></i><span>Meet The Band</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-media menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-headphones" aria-hidden="true"></i><span>Media</span></a>
+                                <a href="media.html" class="hvr-sweep-to-bottom"><i class="fa fa-headphones" aria-hidden="true"></i><span>Media</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-tour menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-bullhorn" aria-hidden="true"></i><span>Tour</span></a>
+                                <a href="tour.html" class="hvr-sweep-to-bottom"><i class="fa fa-bullhorn" aria-hidden="true"></i><span>Tour</span></a>
                             </li>
                         </ul>
                     </div>
@@ -41,46 +43,83 @@
             </div>
         </div>
     </header>
-    <section class="container-fluid">
-            
-    </section>
+    <div class="container-fluid tour-container tour-header">
+    Tour Schedule
+    </div>
+
+    <table class="table-tour col-12">
+        <tbody>
+            <tr>
+                <td scope="row" class="fa fa-bullhorn tour-list"></td>
+                <td>June 9th</td>
+                <td>Hollywood Bowl, Los Angeles California</td>
+            </tr>
+            <tr>
+                <td scope="row" class="fa fa-bullhorn tour-list"></td>
+                <td>June 11th</td>
+                <td>Empire Pool, Wembley, London, England</td>
+            </tr>
+            <tr>
+                <td scope="row" class="fa fa-bullhorn tour-list"></td>
+                <td>July 8th</td>
+                <td>The Coliseum, Jacksonville, Florida</td>
+            </tr>
+            <tr>
+                <td scope="row" class="fa fa-bullhorn tour-list"></td>
+                <td>July 11th</td>
+                <td>Convention Hall, Miami Beach, Florida</td>
+            </tr>
+            <tr>
+                <td scope="row" class="fa fa-bullhorn tour-list"></td>
+                <td>July 15th</td>
+                <td>The Coliseum, Charlotte, North Carolina</td>
+            </tr>
+            <tr>
+                <td scope="row" class="fa fa-bullhorn tour-list"></td>
+                <td>July 18th</td>
+                <td>Coliseum, Greensboro, North Carolina</td>
+            </tr>
+            <tr>
+                <td scope="row" class="fa fa-bullhorn tour-list"></td>
+                <td>July 21st</td>
+                <td>Forest Hills Stadium, New York, New York</td>
+            </tr>
+            <tr>
+                <td scope="row" class="fa fa-bullhorn tour-list"></td>
+                <td>July 24th</td>
+                <td>Civic Centre, Baltimore, Maryland</td>
+            </tr>
+            <tr>
+                <td scope="row" class="fa fa-bullhorn tour-list"></td>
+                <td>July 29th</td>
+                <td>Boston Garden, Boston, Massachusetts</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <div class="container-fluid tour-container tour-foot">
+        See You There!
+    </div>
+
     <footer class="container-fluid">
         <div id="footer-details" class="row">
             <div class="col-12">
                 <h5 class="uppercase general-sub">Connect with us!</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
+                        <a target="_blank" href="https://www.facebook.com/TheMonkees/">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
+                        <a target="_blank" href="https://twitter.com/themonkees?lang=en">
                             <i class="fa fa-twitter" aria-hidden="true"></i>
                             <span class="sr-only">Twitter</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-linkedin" aria-hidden="true"></i>
-                            <span class="sr-only">LinkedIn</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-pinterest" aria-hidden="true"></i>
-                            <span class="sr-only">Pinterest</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-instagram" aria-hidden="true"></i>
-                            <span class="sr-only">Instagram</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
+                        <a target="_blank" href="https://www.youtube.com/user/themonkees">
                             <i class="fa fa-youtube" aria-hidden="true"></i>
                             <span class="sr-only">YouTube</span>
                         </a>
@@ -90,4 +129,5 @@
         </div>
     </footer>
 </body>
+
 </html>
