--- a/meettheband.html
+++ b/meettheband.html
@@ -43,33 +43,37 @@
             </div>
         </div>
     </header>
-<div class="row no-gutters band-cards">
-    <div class="card-md col-3" style="width: 18rem;">
-        <img class="card-img-top" src="assets/images/md.jpg" alt="Micky Dolenz">
-        <div class="card-body">
-            <p class="card-text"><h3 class="member-head">Micky Dolenz - </h3><br><b>Birthdate:</b> March 8th, 1945<br><b>Nationality:</b>  American<br><b>Height:</b> 6'0" (183cm)<br><b>Born In:</b> Los Angeles, California</p>
+    <div class="row no-gutters band-cards">
+        <div class="card-md col-3" style="width: 18rem;">
+            <img class="card-img-top" src="assets/images/md.jpg" alt="Micky Dolenz">
+            <div class="card-body">
+                <p class="card-text">
+                    <h3 class="member-head">Micky Dolenz - </h3><br><b>Birthdate:</b> March 8th, 1945<br><b>Nationality:</b> American<br><b>Height:</b> 6'0" (183cm)<br><b>Born In:</b> Los Angeles, California</p>
+            </div>
+        </div>
+        <div class="card-pt col-3" style="width: 18rem;">
+            <img class="card-img-top" src="assets/images/pt.jpg" alt="Peter Tork">
+            <div class="card-body">
+                <p class="card-text">
+                    <h3 class="member-head">Peter Tork - </h3><br><b>Birthdate:</b> February 13th, 1942<br><b>Nationality:</b> American<br><b>Height:</b> 5'10" (178cm)<br><b>Born In:</b> Washington, District of Columbia</p>
+            </div>
+        </div>
+        <div class="card-dj col-3" style="width: 18rem;">
+            <img class="card-img-top" src="assets/images/dj.jpg" alt="Davy Jones">
+            <div class="card-body">
+                <p class="card-text">
+                    <h3 class="member-head">Davy Jones - </h3><br><b>Birthdate:</b> December 30th, 1945<br><b>Nationality:</b> British<br><b>Height:</b> 5'3" (160cm)<br><b>Born In:</b> Machester, England, UK</p>
+            </div>
+        </div>
+        <div class="card-mn col-3" style="width: 18rem;">
+            <img class="card-img-top" src="assets/images/mn.jpg" alt="Michael Nesmith">
+            <div class="card-body">
+                <p class="card-text">
+                    <h3 class="member-head">Michael Nesmith - </h3><br><b>Birthdate:</b> December 30th, 1942<br><b>Nationality:</b> American<br><b>Height:</b> 6'1" (185cm)<br><b>Born In:</b> Houston, Texas</p>
+            </div>
         </div>
     </div>
-    <div class="card-pt col-3" style="width: 18rem;">
-        <img class="card-img-top" src="assets/images/pt.jpg" alt="Peter Tork">
-        <div class="card-body">
-            <p class="card-text"><h3 class="member-head">Peter Tork - </h3><br><b>Birthdate:</b> February 13th, 1942<br><b>Nationality:</b>  American<br><b>Height:</b> 5'10" (178cm)<br><b>Born In:</b> Washington, District of Columbia</p>
-        </div>
-    </div>
-    <div class="card-dj col-3" style="width: 18rem;">
-        <img class="card-img-top" src="assets/images/dj.jpg" alt="Davy Jones">
-        <div class="card-body">
-            <p class="card-text"><h3 class="member-head">Davy Jones - </h3><br><b>Birthdate:</b> December 30th, 1945<br><b>Nationality:</b>  British<br><b>Height:</b> 5'3" (160cm)<br><b>Born In:</b> Machester, England, UK</p>
-        </div>
-    </div>
-    <div class="card-mn col-3" style="width: 18rem;">
-        <img class="card-img-top" src="assets/images/mn.jpg" alt="Michael Nesmith">
-        <div class="card-body">
-            <p class="card-text"><h3 class="member-head">Michael Nesmith - </h3><br><b>Birthdate:</b> December 30th, 1942<br><b>Nationality:</b>  American<br><b>Height:</b> 6'1" (185cm)<br><b>Born In:</b> Houston, Texas</p>
-        </div>
-    </div>
-    </div>
-    
+
 
     <footer class="container-fluid">
         <div id="footer-details" class="row">
