--- a/index.html
+++ b/index.html
@@ -54,22 +54,23 @@
                 </div>
                 <div class="row no-gutters form-group">
                     <div class="col form-group">
-                        <p class="short-bio">We are are a 1960's pop band. We consist of 4 talented members. We are available for an array of gigs and have experience across many events. This includes our own tour! If you are looking for the ideal band for any event, please don't hesitate to contact us for our availability information. We can't wait to hear from you!</p>
+                        <p class="short-bio">We are are a 1960's pop band. We consist of 4 talented members. We are available for an array of gigs and have experience across many events. This includes our own tour! If you are looking for the ideal band for any event, please
+                            don't hesitate to contact us for our availability information. We can't wait to hear from you!</p>
                         <form>
                             <div class="form-group">
-    <label for="exampleFormControlInput1">Name</label>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your Name">
-  </div>
-  <div class="form-group">
-    <label for="exampleFormControlInput1">Email address</label>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-  </div>
-  <div class="form-group">
-    <label for="exampleFormControlInput1">Your Message</label>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Type your message here...">
-  </div>
-<button type="submit" class="btn btn-warning"> Send! </button>
-</form>
+                                <label for="exampleFormControlInput1">Name</label>
+                                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your Name">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleFormControlInput1">Email address</label>
+                                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleFormControlInput1">Your Message</label>
+                                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Type your message here...">
+                            </div>
+                            <button type="submit" class="btn btn-warning"> Send! </button>
+                        </form>
                     </div>
                 </div>
             </div>
