Final update to website

--- a/index.html
+++ b/index.html
@@ -54,9 +54,12 @@
                 </div>
                 <div class="row no-gutters form-group">
                     <div class="col form-group">
-                        <p class="short-bio">We are are a 1960's pop band. We consist of 4 talented members. We are available for an array of gigs and have experience across many events. This includes our own tour! If you are looking for the ideal band for any event, please
-                            don't hesitate to contact us for our availability information. We can't wait to hear from you!</p>
-                        <form>
+                        <p class="short-bio">We are are a 1960's pop band. We consist of four talented members. We are available for an array of gigs and have experience across many events. This includes our own tour! If you are looking for the ideal band for any event, please
+                            don't hesitate to contact us below for our availability information. We can't wait to hear from you!</p>
+                        <div class="left-image col-6 col-md-3">
+                            <img src="assets/images/cover2.png" class="img-rounded" alt="The Monkees Cover">
+                        </div>
+                    <form class="col-4 contact-info col-6 col-md-6">
                             <div class="form-group">
                                 <label for="exampleFormControlInput1">Name</label>
                                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your Name">
@@ -77,7 +80,7 @@
         </div>
     </section>
     <footer class="container-fluid">
-        <div id="footer-details" class="row">
+        <div id="footer-details" class="row no-gutters">
             <div class="col-12">
                 <h5 class="uppercase general-sub">Connect with us!</h5>
                 <ul class="list-inline social-links">
