Add the Balsamiq mockup and update the README.md file with the link to the mockup.

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
                     <div class="col form-group">
                         <p class="short-bio">We are are a 1960's pop band. We consist of four talented members. We are available for an array of gigs and have experience across many events. This includes our own tour! If you are looking for the ideal band for any event, please
                             don't hesitate to contact us below for our availability information. We can't wait to hear from you!</p>
-                        <div class="left-image col-6 col-md-3">
+                        <div class="left-image col-8 list-inline-item">
                             <img src="assets/images/cover2.png" class="img-rounded" alt="The Monkees Cover">
                         </div>
-                    <form class="col-4 contact-info col-6 col-md-6">
+                    <form class="col-4 contact-info col-6 col-md-6 list-inline-item no-gutters">
                             <div class="form-group">
                                 <label for="exampleFormControlInput1">Name</label>
-                                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your Name">
+                                <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Your Name">
                             </div>
                             <div class="form-group">
                                 <label for="exampleFormControlInput1">Email address</label>
@@ -70,7 +70,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="exampleFormControlInput1">Your Message</label>
-                                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Type your message here...">
+                                <input type="message" class="form-control" id="exampleFormControlInput1" placeholder="Type your message here...">
                             </div>
                             <button type="submit" class="btn btn-warning"> Send! </button>
                         </form>
