Updated files, updated final README.md

--- a/meettheband2.html
+++ b/meettheband2.html
@@ -14,7 +14,9 @@
     <!-- Bootstrap core CSS -->
     <link href="/assets/bootstrap/4.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Just+Another+Hand|Modak" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Just+Another+Hand" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Modak" rel="stylesheet">
 
     <style>
       .bd-placeholder-img {
@@ -65,6 +67,8 @@
   </nav>
 </header>
 
+<div class="band-featurette">
+
     <hr class="featurette-divider">
 
     <div class="row featurette">
@@ -73,7 +77,7 @@
         <p class="lead">The Monkees are an American rock and pop band originally active between 1966 and 1971, with reunion albums and tours in the decades that followed. Their original line-up consisted of the American actor/musicians Micky Dolenz, Michael Nesmith, and Peter Tork with English actor/singer Davy Jones. The group was conceived in 1965 by television producers Bob Rafelson and Bert Schneider specifically for the situation comedy series The Monkees, which aired from 1966 to 1968. The band's music was initially supervised by record producer Don Kirshner, backed by the songwriting duo of Tommy Boyce and Bobby Hart.</p>
       </div>
       <div class="col-md-5">
-        <img src="assets/images/band.jpg"  class="bd-placeholder-img" width="100%" height="100%" alt="Band Photo" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/>
+        <img src="assets/images/band.jpg"  class="bd-placeholder-img" alt="Band Photo"/>
         </div>
     </div>
 
@@ -85,7 +89,7 @@
         <p class="lead">George Michael Dolenz Jr. (born March 8, 1945) is an American actor, musician, television director, radio personality and theater director, best known as a vocalist and drummer of the 1960s pop/rock band the Monkees.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <img src="assets/images/md.jpg"  class="bd-placeholder-img" width="100%" height="100%" alt="Band Photo" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/>
+        <img src="assets/images/md.jpg"  class="bd-placeholder-img" alt="Micky Dolenz"/>
          </div>
     </div>
 
@@ -99,7 +103,7 @@
 He grew up in Connecticut and in the mid-sixties was part of the Greenwich Village folk scene, and as an accomplished musician, befriended Stephen Stills. After moving to Los Angeles with Stills, he was recruited for the musical television sitcom The Monkees, and became a teenage idol between 1966-68. Tork recorded his debut solo album Stranger Things Have Happened in 1994, and later toured with his blues band Shoe Suede Blues.</p>
       </div>
       <div class="col-md-5">
-        <img src="assets/images/pt.jpg"  class="bd-placeholder-img" width="100%" height="100%" alt="Band Photo" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/>
+        <img src="assets/images/pt.jpg"  class="bd-placeholder-img" alt="Peter Tork"/>
         </div>
     </div>
 
@@ -111,7 +115,7 @@ He grew up in Connecticut and in the mid-sixties was part of the Greenwich Villa
         <p class="lead">David Thomas Jones (30 December 1945 – 29 February 2012) was an English singer-songwriter, musician, actor and businessman, best known as a member of the band the Monkees, and for starring in the TV series of the same name. His acting credits include a Tony-nominated performance as the Artful Dodger in the original London and Broadway productions of Oliver! as well as a guest star role in a hallmark episode of The Brady Bunch television show and later reprised parody film; Love, American Style; and My Two Dads. Jones is considered a teen idol.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <img src="assets/images/dj.jpg"  class="bd-placeholder-img" width="100%" height="100%" alt="Band Photo" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/>
+        <img src="assets/images/dj.jpg"  class="bd-placeholder-img" alt="Davy Jones" />
          </div>
     </div>
 
@@ -127,15 +131,17 @@ After the break-up of the Monkees, Nesmith continued his successful songwriting 
 He is also an executive producer of the cult film Repo Man (1984). In 1981, Nesmith won the first Grammy Award given for Video of the Year for his hour-long television show, Elephant Parts.</p>
       </div>
       <div class="col-md-5">
-        <img src="assets/images/mn.jpg"  class="bd-placeholder-img" width="100%" height="100%" alt="Band Photo" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/>
+        <img src="assets/images/mn.jpg"  class="bd-placeholder-img" alt="Michael Nesmith" />
         </div>
     </div>
 
     <hr class="featurette-divider">
+    
+    </div>
 
     <!-- /END THE FEATURETTES -->
 
-  </div><!-- /.container -->
+  <!-- /.container -->
 
 
   <!-- FOOTER -->
@@ -143,7 +149,6 @@ He is also an executive producer of the cult film Repo Man (1984). In 1981, Nesm
     <p class="float-right"><a href="#">Back to top</a></p>
     <p>&copy; 1966-2019 The Monkees &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
   </footer>
-</main>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script>window.jQuery || document.write('<script src="/assets/js/vendor/jquery-slim.min.js"><\/script>')</script><script src="/assets/bootstrap/4.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script></body>
 </html>
