--- a/bookings2.html
+++ b/bookings2.html
@@ -14,7 +14,9 @@
     <!-- Bootstrap core CSS -->
     <link href="/assets/bootstrap/4.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Just+Another+Hand|Modak" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Just+Another+Hand" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Modak" rel="stylesheet">
 
     <style>
         .bd-placeholder-img {
@@ -74,11 +76,11 @@
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="inputFirstName4"><b>First Name</b></label>
-      <input type="name" class="form-control" id="inputFirstName4" placeholder="Jane">
+      <input type="text" class="form-control" id="inputFirstName4" placeholder="Jane">
     </div>
     <div class="form-group col-md-6">
       <label for="inputLastName4"><b>Last Name</b></label>
-      <input type="name" class="form-control" id="inputLastName4" placeholder="Doe">
+      <input type="text" class="form-control" id="inputLastName4" placeholder="Doe">
     </div>
   </div>
   <div class="form-group">
@@ -87,7 +89,7 @@
   </div>
   <div class="form-group">
     <label for="inputPhone"><b>Phone</b></label>
-    <input type="text" class="form-control" id="inputPhone" placeholder="0891234567">
+    <input type="tel" class="form-control" id="inputPhone" placeholder="0891234567">
   </div>
   <div class="form-group">
     <label for="inputMessage"><b>Message</b></label>
@@ -103,7 +105,6 @@
         <p class="float-right"><a href="#">Back to top</a></p>
         <p>&copy; 1966-2019 The Monkees &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
     </footer>
-    </main>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script>
         window.jQuery || document.write('<script src="/assets/js/vendor/jquery-slim.min.js"><\/script>')
