--- a/index3.html
+++ b/index3.html
@@ -14,7 +14,11 @@
     <!-- Bootstrap core CSS -->
     <link href="/assets/bootstrap/4.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Just+Another+Hand|Modak" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Just+Another+Hand" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Modak" rel="stylesheet">
+
+
 
     <style>
       .bd-placeholder-img {
@@ -73,7 +77,7 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="assets/images/monkees.jpg"  class="bd-placeholder-img" width="100%" height="100%" alt="Band Photo" preserveAspectRatio="xMidYMid slice">
+        <img src="assets/images/monkees.jpg"  class="bd-placeholder-img" alt="Band Photo">
         <div class="container">
           <div class="carousel-caption">
             <h1 class="carousel-heading">Hey, Hey! We're The Monkees!</h1>
@@ -82,7 +86,7 @@
         </div>
         </div>
       <div class="carousel-item">
-        <img src="assets/images/bandimage2.jpg"  class="bd-placeholder-img" width="100%" height="100%" alt="Band Photo" preserveAspectRatio="xMidYMid slice">
+        <img src="assets/images/bandimage2.jpg"  class="bd-placeholder-img" alt="Band Photo">
         <div class="container">
           <div class="carousel-caption">
             <h1 class="carousel-heading">Have a listen to our music and a look at our videos!</h1>
@@ -91,7 +95,7 @@
           </div>
         </div>
       <div class="carousel-item">
-        <img src="assets/images/bandimage.jpg"  class="bd-placeholder-img" width="100%" height="100%" alt="Band Photo" preserveAspectRatio="xMidYMid slice">
+        <img src="assets/images/bandimage.jpg"  class="bd-placeholder-img" alt="Band Photo">
         <div class="container">
           <div class="carousel-caption">
             <h1 class="carousel-heading">Have us play at your next event!</h1>
@@ -151,7 +155,6 @@
     <p class="float-right"><a href="#">Back to top</a></p>
     <p>&copy; 1966-2019 The Monkees &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
   </footer>
-</main>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script>window.jQuery || document.write('<script src="/assets/js/vendor/jquery-slim.min.js"><\/script>')</script><script src="/assets/bootstrap/4.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script></body>
 </html>
