Updated page names

--- a/index.html
+++ b/index.html
@@ -42,23 +42,23 @@
   <body>
     <header>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand" href="index3.html">The Monkees</a>
+    <a class="navbar-brand" href="index.html">The Monkees</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="index3.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="meettheband2.html">Meet The Band</a>
+          <a class="nav-link" href="meettheband.html">Meet The Band</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="media2.html">Media</a>
+          <a class="nav-link" href="media.html">Media</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="bookings2.html">Bookings</a>
+          <a class="nav-link" href="bookings.html">Bookings</a>
         </li>
       </ul>
       <form class="form-inline mt-2 mt-md-0">
@@ -81,7 +81,7 @@
         <div class="container">
           <div class="carousel-caption">
             <h1 class="carousel-heading">Hey, Hey! We're The Monkees!</h1>
-            <p><a class="btn btn-md btn text-dark bg-light" href="meettheband2.html" role="button">Meet The Band</a></p>
+            <p><a class="btn btn-md btn text-dark bg-light" href="meettheband.html" role="button">Meet The Band</a></p>
           </div>
         </div>
         </div>
@@ -90,7 +90,7 @@
         <div class="container">
           <div class="carousel-caption">
             <h1 class="carousel-heading">Have a listen to our music and a look at our videos!</h1>
-            <p><a class="btn btn-md btn text-dark bg-light" href="media2.html" role="button">Media</a></p>
+            <p><a class="btn btn-md btn text-dark bg-light" href="media.html" role="button">Media</a></p>
           </div>
           </div>
         </div>
@@ -99,7 +99,7 @@
         <div class="container">
           <div class="carousel-caption">
             <h1 class="carousel-heading">Have us play at your next event!</h1>
-            <p><a class="btn btn-md btn text-dark bg-light" href="bookings2.html" role="button">Bookings</a></p>
+            <p><a class="btn btn-md btn text-dark bg-light" href="bookings.html" role="button">Bookings</a></p>
           </div>
           </div>
         </div>
