--- a/meettheband.html
+++ b/meettheband.html
@@ -40,23 +40,23 @@
   <body>
     <header>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand" href="index3.html">The Monkees</a>
+    <a class="navbar-brand" href="index.html">The Monkees</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="index3.html">Home</a>
+          <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="meettheband2.html">Meet The Band <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="meettheband.html">Meet The Band <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="media2.html">Media</a>
+          <a class="nav-link" href="media.html">Media</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="bookings2.html">Bookings</a>
+          <a class="nav-link" href="bookings.html">Bookings</a>
         </li>
       </ul>
       <form class="form-inline mt-2 mt-md-0">
