--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/carousel/">
 
     <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap-grid.css">
+    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap-reboot.css">
+    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css>"
     <link href="/assets/bootstrap/4.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
