--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
   <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/carousel/">
 
   <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="assets/bootstrap/4.3/dist/css/bootstrap-grid.css">
-  <link rel="stylesheet" href="assets/bootstrap/4.3/dist/css/bootstrap-grid.min.css">
-  <link rel="stylesheet" href="assets/bootstrap/4.3/dist/css/bootstrap-reboot.css">
-  <link rel="stylesheet" href="assets/bootstrap/4.3/dist/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/bootstrap/4.3/dist/css/bootstrap.css">
+  <link rel="stylesheet" type=¨text/css¨ href="assets/bootstrap/4.3/dist/css/bootstrap-grid.css">
+  <link rel="stylesheet" type=¨text/css¨ href="assets/bootstrap/4.3/dist/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" type=¨text/css¨ href="assets/bootstrap/4.3/dist/css/bootstrap-reboot.css">
+  <link rel="stylesheet" type=¨text/css¨ href="assets/bootstrap/4.3/dist/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" type=¨text/css¨ href="assets/bootstrap/4.3/dist/css/bootstrap.css">
+  <script src="..\assets\bootstrap\4.3\dist\js\bootstrap.js"></script>
+    <script src="..\assets\bootstrap\4.3\dist\js\bootstrap.bundle.js"></script>
+      <script src="..\assets\bootstrap\4.3\dist\js\bootstrap.bundle.min.js"></script>
+        <script src="..\assets\bootstrap\4.3\dist\js\bootstrap.min.js"></script>
   <link rel="stylesheet" href="assets/bootstrap/4.3/dist/css/bootstrap.min.css">
   <link href="/assets/bootstrap/4.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
