Update all files for submission, add titles and background colors.

--- a/bookings.html
+++ b/bookings.html
@@ -65,6 +65,11 @@
             </div>
         </nav>
     </header>
+    
+      <div class="page-title">
+  <p>Bookings</p>
+  </div>
+    
     <div>
         <div class="contact-text">
             <h1 class="contact-heading">Contact us for availability!</h1>
@@ -99,9 +104,33 @@
 
     </div>
 
-      <footer class="container">
-    <p class="float-right"><a href="#">Back to top</a></p>
-    <p>&copy; 1966-2019 The Monkees &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <!-- FOOTER -->
+  <footer class="container">
+    <p>&copy; 1966-2019 The Monkees &middot;
+    <div id="footer-details" class="row">
+            <div class="col-12">
+                <ul class="list-inline social-links">
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.facebook.com/TheMonkees/">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://twitter.com/themonkees?lang=en">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                            <span class="sr-only">Twitter</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.youtube.com/user/themonkees">
+                            <i class="fa fa-youtube" aria-hidden="true"></i>
+                            <span class="sr-only">YouTube</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div></p> 
   </footer>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script>
