--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     </nav>
   </header>
 
+
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -126,7 +127,7 @@
     <div class="row">
       <div class="col-lg-4">
         <a target="_blank" href="https://www.facebook.com/TheMonkees/">
-                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                            <i class="fa fa-facebook main-social-links" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
         <p>Click the icon and join our Facebook community. We have regular band updates and advertise any upcoming tours on our Facebook page!</p>
@@ -134,7 +135,7 @@
       <!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <a target="_blank" href="https://twitter.com/themonkees?lang=en">
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                            <i class="fa fa-twitter main-social-links" aria-hidden="true"></i>
                             <span class="sr-only">Twitter</span>
                         </a>
         <p>Click the icon and follow us on Twitter. Our Twitter plays host to daily band news and updates. We have regular communications with our fans with this outlet. Keep up to date with us here!</p>
@@ -142,7 +143,7 @@
       <!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <a target="_blank" href="https://www.youtube.com/user/themonkees">
-                            <i class="fa fa-youtube" aria-hidden="true"></i>
+                            <i class="fa fa-youtube main-social-links" aria-hidden="true"></i>
                             <span class="sr-only">YouTube</span>
                         </a>
         <p>Click the icon and subscribe to our YouTube channel. Our Youtube channel contains all of our video material. As new content arises, we always make it available on our YouTube. See you there!</p>
@@ -157,8 +158,31 @@
 
   <!-- FOOTER -->
   <footer class="container">
-    <p class="float-right"><a href="#">Back to top</a></p>
-    <p>&copy; 1966-2019 The Monkees &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+    <p>&copy; 1966-2019 The Monkees &middot;
+    <div id="footer-details" class="row">
+            <div class="col-12">
+                <ul class="list-inline social-links">
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.facebook.com/TheMonkees/">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://twitter.com/themonkees?lang=en">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                            <span class="sr-only">Twitter</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.youtube.com/user/themonkees">
+                            <i class="fa fa-youtube" aria-hidden="true"></i>
+                            <span class="sr-only">YouTube</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div></p> 
   </footer>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script>
