--- a/meettheband.html
+++ b/meettheband.html
@@ -11,7 +11,7 @@
 
 
   <!-- Bootstrap core CSS -->
-   <link href="assets/bootstrap/4.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/bootstrap/4.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Just+Another+Hand" rel="stylesheet">
@@ -68,13 +68,17 @@
     </nav>
   </header>
 
+  <div class="page-title">
+    <p>Meet The Band</p>
+  </div>
+
   <div class="band-featurette">
 
     <hr class="featurette-divider">
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading">Meet the Band</h2>
+        <h2 class="featurette-heading">About the Band</h2>
         <p class="lead">The Monkees are an American rock and pop band originally active between 1966 and 1971, with reunion albums and tours in the decades that followed. Their original line-up consisted of the American actor/musicians Micky Dolenz, Michael Nesmith,
           and Peter Tork with English actor/singer Davy Jones. The group was conceived in 1965 by television producers Bob Rafelson and Bert Schneider specifically for the situation comedy series The Monkees, which aired from 1966 to 1968. The band's
           music was initially supervised by record producer Don Kirshner, backed by the songwriting duo of Tommy Boyce and Bobby Hart.</p>
@@ -133,7 +137,8 @@
           Nesmith's songwriting credits include "Different Drum" (sung by Linda Ronstadt with the Stone Poneys). After the break-up of the Monkees, Nesmith continued his successful songwriting and performing career, first with the seminal country rock
           group the First National Band, with whom he had a top-40 hit, "Joanne", and then as a solo artist. He is a noted player of the 12-string guitar, performing on custom-built 12-string electric guitars with the Monkees (built by Gretsch) and various
           12-string acoustic models during his post-Monkees career. He is also an executive producer of the cult film Repo Man (1984). In 1981, Nesmith won the first Grammy Award given for Video of the Year for his hour-long television show, Elephant
-          Parts.</p>
+          Parts.
+        </p>
       </div>
       <div class="col-md-5">
         <img src="assets/images/mn.jpg" class="bd-placeholder-img" alt="Michael Nesmith" />
@@ -150,9 +155,34 @@
 
 
   <!-- FOOTER -->
-    <footer class="container">
-    <p class="float-right"><a href="#">Back to top</a></p>
-    <p>&copy; 1966-2019 The Monkees &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+  <!-- FOOTER -->
+  <footer class="container">
+    <p>&copy; 1966-2019 The Monkees &middot;
+      <div id="footer-details" class="row">
+        <div class="col-12">
+          <ul class="list-inline social-links">
+            <li class="list-inline-item">
+              <a target="_blank" href="https://www.facebook.com/TheMonkees/">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+            </li>
+            <li class="list-inline-item">
+              <a target="_blank" href="https://twitter.com/themonkees?lang=en">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                            <span class="sr-only">Twitter</span>
+                        </a>
+            </li>
+            <li class="list-inline-item">
+              <a target="_blank" href="https://www.youtube.com/user/themonkees">
+                            <i class="fa fa-youtube" aria-hidden="true"></i>
+                            <span class="sr-only">YouTube</span>
+                        </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </p>
   </footer>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script>
